--- a/_includes/header.html
+++ b/_includes/header.html
@@ -45,7 +45,7 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-lead-in">Welcome To Our Wedding!</div>
-                <div class="intro-heading">It's Nice To See You!</div>
+                <div class="intro-heading">So Nice To See You!</div>
                 <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
         </div>
