--- a/_includes/services.html
+++ b/_includes/services.html
@@ -7,11 +7,12 @@
                     <h3 class="section-subheading text-muted">What to expect when wedding.</h3>
                 </div>
             </div>
+
             <div class="row text-center">
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-circle-thin fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Ceremony</h4>
                     <p class="text-muted">A wedding wouldn't be complete without a ceremony.  There'll totally be one.</p>
@@ -20,29 +21,51 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-cutlery fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Food</h4>
-                    <p class="text-muted">BBQ. Tex-Mex. Blue Bell Ice Cream. Ugly cake that tastes sublime. Bread pudding. Your stomach will thank you.</p>
-                </div>
-					
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Alcohol</h4>
-                    <p class="text-muted">There'll be people who love alcohol and people who hate it.  It won't be awkward at all! <!--<img src="img/b51c951c6feb91ad7830a9d98ca90ccc.png" width="10" height="10" />--></p>
+                    <p class="text-muted">Real Texas BBQ. Tex-Mex. Maybe both!</p>
                 </div>
 
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-cutlery fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <h4 class="service-heading">Dessert</h4>
+                    <p class="text-muted">Ugly cake that tastes sublime. Bread pudding. Blue Bell Ice Cream. Your stomach will thank you.</p>
+                </div>
+            </div>
+
+            <div class="row text-center">
+                <div class="col-md-4">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-camera fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Breathtaking Views</h4>
                     <p class="text-muted">Palo Duro Canyon is the 2nd largest canyon in the US. Really, you say? Yup. We've got charts to back it up and everything.</p>
                 </div>
+
+                <div class="col-md-4">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-glass fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <h4 class="service-heading">Alcohol</h4>
+                    <p class="text-muted">There'll be people who love alcohol and people who hate it.  It won't be awkward at all! <img src="img/b51c951c6feb91ad7830a9d98ca90ccc.png" width="14" height="14" /></p>
+                </div>
+
+                <div class="col-md-4">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-music fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <h4 class="service-heading">Dancing</h4>
+                    <p class="text-muted">Lord of the dance.</p>
+                </div>
+
             </div>
+
         </div>
     </section>
