--- a/_includes/team.html
+++ b/_includes/team.html
@@ -30,7 +30,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+                    <p class="large text-muted">With over 70 combined years of experience, our friendly and professional staff is able to offer knowledgeable assistance to all customers, whether you're trying to take something apart, putting it back together, or just making it up as you go along --- we can help.</p>
                 </div>
             </div>
         </div>
