Checkpoint current changes

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,14 +19,17 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Services</a>
+                        <a class="page-scroll" href="#when">When</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Portfolio</a>
+                        <a class="page-scroll" href="#what">What</a>
                     </li>
                     <li>
+                        <a class="page-scroll" href="#photos">Photos</a>
+                    </li>
+                    <!--<li>
                         <a class="page-scroll" href="#about">About</a>
-                    </li>
+                    </li>-->
                     <li>
                         <a class="page-scroll" href="#team">Team</a>
                     </li>
@@ -46,7 +49,7 @@
             <div class="intro-text">
                 <div class="intro-lead-in">Welcome To Our Wedding!</div>
                 <div class="intro-heading">So Nice To See You!</div>
-                <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
+                <a href="#when" class="page-scroll btn btn-xl">Let's get this party started!</a>
             </div>
         </div>
     </header>
