--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,9 +7,12 @@
     <body id="page-top" class="index">
 
     {% include header.html %}
+    {% include timeline.html %}
     {% include services.html %}
-    {% include portfolio_grid.html %}
+    {% include photos.html %}
+    {% comment %}
     {% include about.html %}
+    {% endcomment %}
     {% include team.html %}
     {% include clients.html %}
     {% include contact.html %}
