--- a/_includes/clients.html
+++ b/_includes/clients.html
@@ -3,23 +3,23 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="img/logos/envato.jpg" class="img-responsive img-centered" alt="">
+                    <a href="//www.gnu.org/software/emacs/">
+                        <img src="img/logos/Emacs-icon.sh-gray.png" class="img-responsive img-centered" alt="" style="height: 50px">
+                    </a>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <a href="//github.com">
+                        <img src="img/logos/github-3cd5679f54dc60811383649f9f6ea37d-trim.png" class="img-responsive img-centered" alt="" style="height: 50px">
                     </a>
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <a href="#">
-                        <img src="img/logos/designmodo.jpg" class="img-responsive img-centered" alt="">
+                        <img src="img/logos/so-logo-gray.png" class="img-responsive img-centered" alt="" style="height: 50px">
                     </a>
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <a href="#">
-                        <img src="img/logos/themeforest.jpg" class="img-responsive img-centered" alt="">
-                    </a>
-                </div>
-                <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="img/logos/creative-market.jpg" class="img-responsive img-centered" alt="">
+                        <img src="img/logos/jekyll-logo-2x.png" class="img-responsive img-centered" alt="" style="height: 50px">
                     </a>
                 </div>
             </div>
