--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -270,6 +270,8 @@ header {
     color: #fff;
     background-attachment: scroll;
     background-image: url('{{ site.baseurl }}/img/header-bg.jpg');
+    /*background-image: url('{{ site.baseurl }}/img/lighthouse-rock-profile.jpg');
+    background-image: url('{{ site.baseurl }}/img/pdc-night_9415.jpg');*/
     background-position: center center;
     background-repeat: none;
     -webkit-background-size: cover;
