--- a/_includes/services.html
+++ b/_includes/services.html
@@ -1,9 +1,9 @@
-<!-- Services Section -->
-    <section id="services">
+<!-- What Section -->
+    <section id="what">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Services</h2>
+                    <h2 class="section-heading">The What</h2>
                     <h3 class="section-subheading text-muted">What to expect when wedding.</h3>
                 </div>
             </div>
@@ -24,7 +24,7 @@
                         <i class="fa fa-cutlery fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Food</h4>
-                    <p class="text-muted">Real Texas BBQ. Tex-Mex. Maybe both!</p>
+                    <p class="text-muted">Real Texas BBQ.</p>
                 </div>
 
                 <div class="col-md-4">
@@ -33,7 +33,7 @@
                         <i class="fa fa-cutlery fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Dessert</h4>
-                    <p class="text-muted">Ugly cake that tastes sublime. Bread pudding. Blue Bell Ice Cream. Your stomach will thank you.</p>
+                    <p class="text-muted">Cupcakes. Panna cotta. Your stomach will thank you.</p>
                 </div>
             </div>
 
@@ -44,7 +44,7 @@
                         <i class="fa fa-camera fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Breathtaking Views</h4>
-                    <p class="text-muted">Palo Duro Canyon is the 2nd largest canyon in the US. Really, you say? Yup. We've got charts to back it up and everything.</p>
+                    <p class="text-muted">Palo Duro Canyon is the 2nd largest canyon in the US. Don't believe me? We've got charts to back it up and everything.</p>
                 </div>
 
                 <div class="col-md-4">
@@ -62,7 +62,7 @@
                         <i class="fa fa-music fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Dancing</h4>
-                    <p class="text-muted">Lord of the dance.</p>
+                    <p class="text-muted">Bring your dancin' shoes, 'cause it's about to to down. <!--TODO: insert dance emoji--></p>
                 </div>
 
             </div>
