--- a/_includes/timeline.html
+++ b/_includes/timeline.html
@@ -12,15 +12,16 @@
                     <ul class="timeline">
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/1.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/lighthouse-rock-profile-square.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>The Wedding</h4>
-                                    <h4 class="subheading">October 21, 2017</h4>
+                                    <h4>Wedding and Reception</h4>
+                                    <h4 class="subheading">Afternoon, October 21, 2017</h4>
+                                    <h4 class="subheading"><a href="https://goo.gl/maps/LdfFnPZ61QS2">Palo Duro Canyon, Texas</a></h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Afternoon time TBD. Be there or be square!</p>
+                                    <p class="text-muted">Afternoon ceremony time still TBD, with reception/dinner/dancing immediately following. Ceremony and reception will be held at the <a href="https://goo.gl/maps/QN6v81xXstG2">Mack Dick Pavilion</a>. Palo Duro Canyon is a Texas state park located 20 miles east of <a href="https://goo.gl/maps/fho6p25nYjq">Canyon, TX</a>, in the Texas Panhandle.</p>
                                 </div>
                             </div>
                         </li>
