Shorten button to see if it fixed page width not going 100% across page
Also remove slashes to allow better line breaks

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -49,7 +49,7 @@
             <div class="intro-text">
                 <div class="intro-lead-in">Welcome To Our Wedding!</div>
                 <div class="intro-heading">So Nice To See You!</div>
-                <a href="#when" class="page-scroll btn btn-xl">Let's get this party started!</a>
+                <a href="#when" class="page-scroll btn btn-xl">Tell me more!</a>
             </div>
         </div>
     </header>
