--- a/_includes/timeline.html
+++ b/_includes/timeline.html
@@ -21,7 +21,7 @@
                                     <h4 class="subheading"><a href="https://goo.gl/maps/LdfFnPZ61QS2">Palo Duro Canyon, Texas</a></h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Afternoon ceremony time still TBD, with reception/dinner/dancing immediately following. Ceremony and reception will be held at the <a href="https://goo.gl/maps/QN6v81xXstG2">Mack Dick Pavilion</a>. Palo Duro Canyon is a Texas state park located 20 miles east of <a href="https://goo.gl/maps/fho6p25nYjq">Canyon, TX</a>, in the Texas Panhandle.</p>
+                                    <p class="text-muted">Afternoon ceremony time still TBD, with reception, dinner, and dancing immediately following. Ceremony and reception will be held at the <a href="https://goo.gl/maps/QN6v81xXstG2">Mack Dick Pavilion</a>. Palo Duro Canyon is a Texas state park located 20 miles east of <a href="https://goo.gl/maps/fho6p25nYjq">Canyon, TX</a>, in the Texas Panhandle.</p>
                                 </div>
                             </div>
                         </li>
