--- a/_includes/services.html
+++ b/_includes/services.html
@@ -24,7 +24,7 @@
                         <i class="fa fa-cutlery fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Food</h4>
-                    <p class="text-muted">Real Texas BBQ.</p>
+                    <p class="text-muted">Real Texas BBQ. Bring your strechy pants.</p>
                 </div>
 
                 <div class="col-md-4">
@@ -33,7 +33,7 @@
                         <i class="fa fa-cutlery fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Dessert</h4>
-                    <p class="text-muted">Cupcakes. Panna cotta. Your stomach will thank you.</p>
+                    <p class="text-muted">Cupcakes. Panna cotta. Your taste buds will thank you.</p>
                 </div>
             </div>
 
@@ -62,7 +62,7 @@
                         <i class="fa fa-music fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Dancing</h4>
-                    <p class="text-muted">Bring your dancin' shoes, 'cause it's about to to down. <!--TODO: insert dance emoji--></p>
+                    <p class="text-muted">Bring your dancin' shoes, 'cause it's about to go down. <!--TODO: insert dance emoji--></p>
                 </div>
 
             </div>
