--- a/_includes/services.html
+++ b/_includes/services.html
@@ -24,7 +24,7 @@
                         <i class="fa fa-cutlery fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Food</h4>
-                    <p class="text-muted">Real Texas BBQ. Bring your strechy pants.</p>
+                    <p class="text-muted">Real Texas BBQ. Size your ball gown accordingly.</p>
                 </div>
 
                 <div class="col-md-4">
