Checkpoint the many many changes from tonight

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,6 +25,12 @@
                         <a class="page-scroll" href="#what">What</a>
                     </li>
                     <li>
+                        <a class="page-scroll" href="#travel">Travel</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#attractions">Attractions</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#photos">Photos</a>
                     </li>
                     <!--<li>
