--- a/_includes/services.html
+++ b/_includes/services.html
@@ -33,7 +33,7 @@
                         <i class="fa fa-cutlery fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Dessert</h4>
-                    <p class="text-muted">Cupcakes. Panna cotta. Your taste buds will thank you.</p>
+                    <p class="text-muted">Cupcakes. Panna cotta.<br/>Your taste buds will thank you.</p>
                 </div>
             </div>
 
