--- a/_includes/timeline.html
+++ b/_includes/timeline.html
@@ -3,8 +3,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">The When</h2>
-                    <h3 class="section-subheading text-muted"></h3>
+                    <h2 class="section-heading">The When & Where</h2>
+                    <h3 class="section-subheading text-muted">the deets</h3>
                 </div>
             </div>
             <div class="row">
@@ -16,13 +16,20 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>Wedding and Reception</h4>
-                                    <h4 class="subheading">Afternoon, October 21, 2017</h4>
+                                    <h4>Wedding & Reception</h4>
+                                    <h4 class="subheading">October 21, 2017<br/>Afternoon</h4>
                                     <h4 class="subheading"><a href="https://goo.gl/maps/LdfFnPZ61QS2">Palo Duro Canyon, Texas</a></h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Afternoon ceremony time still TBD, with reception, dinner, and dancing immediately following. Ceremony and reception will be held at the <a href="https://goo.gl/maps/QN6v81xXstG2">Mack Dick Pavilion</a>. Palo Duro Canyon is a Texas state park located 20 miles east of <a href="https://goo.gl/maps/fho6p25nYjq">Canyon, TX</a>, in the Texas Panhandle.</p>
+                                    <p class="text-muted">Afternoon ceremony (time still TBD). Reception, dinner, and dancing immediately following. Ceremony and reception will be held at the <a href="https://goo.gl/maps/QN6v81xXstG2">Mack Dick Pavilion</a>. Palo Duro Canyon is a Texas state park located 20 miles east of <a href="https://goo.gl/maps/fho6p25nYjq">Canyon, TX</a>, in the Texas Panhandle.</p>
                                 </div>
+                            </div>
+                        </li>
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <h4>Be Part
+                                    <br>Of Our
+                                    <br>Wedding!</h4>
                             </div>
                         </li>
                     </ul>
