--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,8 @@
     {% include header.html %}
     {% include timeline.html %}
     {% include services.html %}
+    {% include travel.html %}
+    {% include attractions.html %}
     {% include photos.html %}
     {% comment %}
     {% include about.html %}
