--- a/_includes/team.html
+++ b/_includes/team.html
@@ -9,7 +9,7 @@
             </div>
             <div class="row">
                 {% for member in site.people %}
-                <div class="col-sm-4">
+                <div class="col-sm-6">
                     <div class="team-member">
                         <img src="img/team/{{ member.pic }}" class="img-responsive img-circle" alt="">
                         <h4>{{ member.name }}</h4>
@@ -30,7 +30,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p class="large text-muted">With over 70 combined years of experience, our friendly and professional staff is able to offer knowledgeable assistance to all customers, whether you're trying to take something apart, putting it back together, or just making it up as you go along --- we can help.</p>
+                    <p class="large text-muted">With over 70 combined years of experience, our friendly and professional staff is able to offer knowledgeable assistance to all customers, whether you're trying to take something apart, putting it back together, or just making it up as you go along &mdash; we can help.</p>
                 </div>
             </div>
         </div>
