--- a/_includes/travel.html
+++ b/_includes/travel.html
@@ -38,7 +38,7 @@
                                     <h4 class="subheading"><a href="https://goo.gl/maps/1Cb993usQ632">2801 4th Ave, Canyon, TX 79015</a></h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Block of rooms already reserved for anyone to use. Call (806) 655-XXXX to book (slightly discounted at $99/night). Tell them Robinson/Garner sent ya'.</p>
+                                    <p class="text-muted">Block of rooms already reserved for anyone to use. Call (806) 655-1818 to book (slightly discounted at $99/night). Tell them Robinson/Garner sent ya'.</p>
                                 </div>
                             </div>
                         </li>
