Checkpoint current changes

--- a/_includes/attractions.html
+++ b/_includes/attractions.html
@@ -34,11 +34,25 @@
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h4>Panhandle-Plains Historical Museum</h4>
-                                    <h4 class="subheading">2503 4th Ave, Canyon, Texas 79015</h4>
+                                    <h4 class="subheading"><a href="https://goo.gl/maps/5Bv3EePoYDU2">2503 4th Ave, Canyon, Texas 79015</a></h4>
                                     <h4 class="subheading"><a href="http://www.panhandleplains.org/">panhandleplains.org</a></h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Largest history museum in the state of Texas. Includes Pioneer Town, paleontology, geology, American Western life and agriculture history, Native American art and artifacts, and a 2 story tall oil derrick.</p>
+                                  <p class="text-muted">   They have a 2-story oil derrick from the 1920s and the equipment that would have installed it.  Kids love the replica pioneer town and the fossils and rocks.  We've also enjoyed the info on agricultural history (how did water pumping work in the 19th century?) and petroleum (what happens if a tool breaks off in a drill-hole?)  Since we're in the south-central US there is obviously a superlative: this is the largest history museum in the state.  We recommend it for kids and nerdy adults alike.
+                            </div>
+                        </li>
+                        <li>
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/image7-square.jpg">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>The American Quarter Horse Hall of Fame &amp; Museum</h4>
+                                    <h4 class="subheading"><a href="https://goo.gl/maps/AcQsLPQY2Do">2601 I-40 East, Amarillo, TX 79104</a></h4>
+                                    <h4 class="subheading"><a href="https://www.aqha.com/museum">aqha.com</a></h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">The American Quarter Horse Hall of Fame &amp; Museum features photographs and paintings of famous Quarter Horses. Exhibits include horse anatomy, horse riding and disciplines, artifacts, riding and cowboy attire, and tack.  (We think "tack" means "gear", kind of an equivalent of the British use of "kit".)  We haven't been here but we're curious.
                                 </div>
                             </div>
                         </li>
