--- a/_includes/services.html
+++ b/_includes/services.html
@@ -15,7 +15,7 @@
                         <i class="fa fa-circle-thin fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Ceremony</h4>
-                    <p class="text-muted">A wedding wouldn't be complete without a ceremony.  There'll totally be one.</p>
+                    <p class="text-muted">Ours will start at 4pm.  It'll include vows and, you know, probably some discussion of how special and sacred the love and partnership between two people can be.  We'll keep things short.</p>
                 </div>
 
                 <div class="col-md-4">
@@ -24,16 +24,7 @@
                         <i class="fa fa-cutlery fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Food</h4>
-                    <p class="text-muted">Real Texas BBQ. Size your ball gown accordingly.</p>
-                </div>
-
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-cutlery fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Dessert</h4>
-                    <p class="text-muted">Cupcakes. Panna cotta.<br/>Your taste buds will thank you.</p>
+                    <p class="text-muted">Real Texas BBQ: Brisket and black bean "burgers"; brownies and bread pudding.<br><br>Size your ball gown accordingly.</p>
                 </div>
             </div>
 
@@ -44,7 +35,7 @@
                         <i class="fa fa-camera fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Breathtaking Views</h4>
-                    <p class="text-muted">Palo Duro Canyon is the 2nd largest canyon in the US. Don't believe me? We've got charts to back it up and everything.</p>
+                    <p class="text-muted">Palo Duro Canyon is the 2nd largest canyon in the US, by some measures.  We've got charts to back it up and everything.</p>
                 </div>
 
                 <div class="col-md-4">
@@ -53,7 +44,7 @@
                         <i class="fa fa-glass fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Alcohol</h4>
-                    <p class="text-muted">There'll be people who love alcohol and people who hate it.  It won't be awkward at all! <img src="img/b51c951c6feb91ad7830a9d98ca90ccc.png" width="14" height="14" /></p>
+                    <p class="text-muted">There'll be people who love alcohol and people who think alcohol is kind of dumb.  <img src="img/b51c951c6feb91ad7830a9d98ca90ccc.png" width="14" height="14" />&nbsp;&nbsp;  The Texas State Parks fall in the latter category, so no alcohol will be allowed outside.  Don't worry, we'll remind you.</p>
                 </div>
 
                 <div class="col-md-4">
