--- a/_includes/travel.html
+++ b/_includes/travel.html
@@ -23,7 +23,7 @@
                                     <h4>Flights</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">The closest airport is Rick Husband Amarillo International Airport (AMA), about 30 miles from Canyon and has car rentals.<br/>Oklahoma City is roughly a 4 hour drive from Amarillo and has additional direct flight options.</p>
+                                    <p class="text-muted">The closest airport is Rick Husband Amarillo International Airport (AMA), about 30 miles from Canyon and has car rentals.<br/>Oklahoma City (OKC) is roughly a 4 hour drive from Amarillo and may have a direct flight option.</p>
                                 </div>
                             </div>
                         </li>
@@ -38,7 +38,7 @@
                                     <h4 class="subheading"><a href="https://goo.gl/maps/1Cb993usQ632">2801 4th Ave, Canyon, TX 79015</a></h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Block of rooms already reserved for anyone to use. Call (806) 655-1818 to book (slightly discounted at $99/night). Tell them Robinson/Garner sent ya'.</p>
+                                    <p class="text-muted">Block of rooms already reserved for anyone to use. Call (806) 655-1818 to book (slightly discounted at $95/night + tax). Tell them Robinson/Garner sent ya'.</p>
                                 </div>
                             </div>
                         </li>
@@ -53,7 +53,7 @@
                                     <h4 class="subheading"><a href="https://goo.gl/maps/NDRonsWjJRF2">Palo Duro Canyon, TX</a></h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Whole(!) campsite adjacent to the Mack Dick Pavillion (&lt;10 minute hike) already reserved. Talk to Karen to save your spot.</p>
+                                    <p class="text-muted">We reserved the whole camping area adjacent to the wedding venue (&lt;10 minute hike). Talk to Karen to save your spot.</p>
                                 </div>
                             </div>
                         </li>
