--- a/_includes/timeline.html
+++ b/_includes/timeline.html
@@ -10,6 +10,21 @@
             <div class="row">
                 <div class="col-lg-12">
                     <ul class="timeline">
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/Imperial-taproom.png" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>Friday Drinks</h4>
+                                    <h4 class="subheading">October 20, 2017<br/>8:30pm&ndash;10pm</h4>
+                                    <h4 class="subheading"><a href="https://goo.gl/maps/Qe6vPEhDPer">Imperial Taproom, Canyon, Texas</a></h4>
+                                </div>
+                                <div class="timeline-body">
+                                  <p class="text-muted">Join the bride and groom for evening-before-the-wedding socializing in downtown Canyon, TX, at a bar so hipster that some locals don't think it belongs in the Texas panhandle at all.  If you're coming from somewhere exotic and fancy like Boston or San Francisco it'll ease you into the weekend.</p.
+                                </div>
+                            </div>
+                        </li>
                         <li>
                             <div class="timeline-image">
                                 <img class="img-circle img-responsive" src="img/lighthouse-rock-profile-square.jpg" alt="">
@@ -17,11 +32,26 @@
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h4>Wedding & Reception</h4>
-                                    <h4 class="subheading">October 21, 2017<br/>Afternoon</h4>
+                                    <h4 class="subheading">October 21, 2017<br/>3:30pm&ndash;9pm</h4>
                                     <h4 class="subheading"><a href="https://goo.gl/maps/LdfFnPZ61QS2">Palo Duro Canyon, Texas</a></h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Afternoon ceremony (time still TBD). Reception, dinner, and dancing immediately following. Ceremony and reception will be held at the <a href="https://goo.gl/maps/QN6v81xXstG2">Mack Dick Pavilion</a>. Palo Duro Canyon is a Texas state park located 20 miles east of <a href="https://goo.gl/maps/fho6p25nYjq">Canyon, TX</a>, in the Texas Panhandle.</p>
+                                    <p class="text-muted">Ceremony at 4pm; reception, dinner, and dancing immediately following. The event will be held at the <a href="https://goo.gl/maps/QN6v81xXstG2">Mack Dick Pavilion</a>. Palo Duro Canyon is a Texas state park located 20 miles east of <a href="https://goo.gl/maps/fho6p25nYjq">Canyon, TX</a>, in the Texas Panhandle.</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/BIG-TEXan-square.jpg" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>Sunday Brunch</h4>
+                                    <h4 class="subheading">October 22, 2017 9am-noon</h4>
+                                    <h4 class="subheading"><a href="https://goo.gl/maps/e8ur51df2652">The Big Texan Steak Ranch, Amarillo, Texas</a></h4>
+                                </div>
+                                <div class="timeline-body">
+                                  <p class="text-muted">We'll grab morning grub at this spot convenient to the airport and right on I-40.  If you're not familiar with tourist traps, this is your chance to experience this great American road-trip phenomenon.  We can't honestly recommend that you try to eat the 72 oz steak, but do come by for breakfast buffet, Texas toast, and our good camaraderie.</p>
                                 </div>
                             </div>
                         </li>
