Add square taproom image jpg

--- a/_includes/timeline.html
+++ b/_includes/timeline.html
@@ -12,7 +12,7 @@
                     <ul class="timeline">
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/Imperial-taproom-square.png" alt="">
+                                <img class="img-circle img-responsive" src="img/Imperial-taproom-square.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
