s/black bean/meat-eater approved non-meat/g

--- a/_includes/services.html
+++ b/_includes/services.html
@@ -33,7 +33,7 @@
                         <i class="fa fa-cutlery fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Food</h4>
-                    <p class="text-muted">Real Texas BBQ: Brisket and black bean "burgers"; brownies and bread pudding.<br><br>Size your ball gown accordingly.</p>
+                    <p class="text-muted">Real Texas BBQ: Brisket and meat-eater approved non-meat "burgers"; brownies and bread pudding.<br><br>Size your ball gown accordingly.</p>
                 </div>
 
             </div>
