Add oil derrick photos for pphm

--- a/_includes/attractions.html
+++ b/_includes/attractions.html
@@ -29,7 +29,7 @@
                         -->
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/8efd5c94f367b9ec0df4ef937fa0ae59.png" alt="dino icon">
+                                <img class="img-circle img-responsive" src="img/pphm_oil_square.jpg" alt="oil derrick">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -38,8 +38,7 @@
                                     <h4 class="subheading"><a href="http://www.panhandleplains.org/">panhandleplains.org</a></h4>
                                 </div>
                                 <div class="timeline-body">
-                                  <p class="text-muted">   They have a 2-story oil derrick from the 1920s and the equipment that would have installed it.  Kids love the replica pioneer town and the fossils and rocks.  We've also enjoyed the info on agricultural history (how did water pumping work in the 19th century?) and petroleum (what happens if a tool breaks off in a drill-hole?)  Since we're in the south-central US there is obviously a superlative: this is the largest history museum in the state.  We recommend it for kids and nerdy adults alike.
-                            </div>
+                                  <p class="text-muted">They have a 2-story oil derrick from the 1920s and the equipment that would have installed it.  Kids love the replica pioneer town and the fossils and rocks.  We've also enjoyed the info on agricultural history (how did water pumping work in the 19th century?) and petroleum (what happens if a tool breaks off in a drill-hole?)  Since we're in the south-central US there is obviously a superlative: this is the largest history museum in the state.  We recommend it for kids and nerdy adults alike.</div>
                         </li>
                         <li>
                             <div class="timeline-image">
