--- a/_includes/services.html
+++ b/_includes/services.html
@@ -45,7 +45,7 @@
                         <i class="fa fa-glass fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Alcohol</h4>
-                    <p class="text-muted">There'll be people who love alcohol and people who think alcohol is kind of dumb.  <img src="img/b51c951c6feb91ad7830a9d98ca90ccc.png" width="14" height="14" />&nbsp;&nbsp;  The Texas State Parks fall in the latter category, so no alcohol will be allowed outside.  Don't worry, we'll remind you.</p>
+                    <p class="text-muted">There'll be people who love alcohol and people who think alcohol is kind of dumb.  <img src="img/b51c951c6feb91ad7830a9d98ca90ccc.png" width="14" height="14" />&nbsp;&nbsp;  The Texas State Parks fall in the latter category, so we will have alcohol (it's not a dry wedding), but we'll have to keep alcohol inside the venue building, not outdoors.  Don't worry, we'll remind you.</p>
                 </div>
 
                 <div class="col-md-6">
