Initial add/checkpoint of faq section

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,7 @@
     {% include about.html %}
     {% endcomment %}
     {% include team.html %}
+    {% include faq.html %}
     {% include clients.html %}
     {% include contact.html %}
     {% include footer.html %}
