--- a/_includes/header.html
+++ b/_includes/header.html
@@ -40,6 +40,9 @@
                         <a class="page-scroll" href="#team">Team</a>
                     </li>
                     <li>
+                        <a class="page-scroll" href="#faq">FAQ</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
                 </ul>
