--- a/_includes/faq.html
+++ b/_includes/faq.html
@@ -10,12 +10,11 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h4>What should I wear?</h4><p>We're calling it "fun formal".</p>
-                    <h4>Should I wear shoes?</h4><p>Yes! You should wear some &mdash; and the more comfortable the better!</p>
-                    <h4>Where are you registered?</h4><p>We have too much stuff already. Please give to your favorite Puerto Rico recovery charity.</p>
-                    <h4>No really, I want to get you something.</h4><p>Cash is king.</p>
-                    <h4>Is there cell coverage or Wi-Fi?</h4><p>Assume not. Cell coverage in the canyon and at Mack Dick Pavilion is little to non-existent. Expect state run Wi-Fi at the pavilion to almost, but infuriatingly not quite work. :(</p>
-                    <h4>Can I call a ride-share from the venue?</h4><p>Assume not. Lyft and Uber are in the area, but spotty cell phone coverage and few drivers in the area will make this dicey. Plan ahead accordingly.</p>
-                    <h4>Hasn't your wedding been hastily thrown together?</h4><p>Perhaps more than we've liked, but we're rolling with it! #HastilyThrownTogether #ButYouLoveUsAnyway :D</p>
+                    <h4>What about my shoes?</h4><p>Please wear comfortable shoes!  We want people to mingle at the cocktail tables we have set up, and to be comfortable walking into and out of the Pavilion, and to be comfortable dancing :-)
+                    <h4>Where are you registered?</h4><p>Thank you to everyone who has asked us about gifts. Thinking about it, this is indeed part of the wedding tradition.  However, please understand that we have too much stuff already, and are working on combining two households - so we are actually requesting no gifts.  
+                    <h4>How is cell coverage in the canyon?</h4><p>Well, it's pretty spotty.  Try to have everything you need from the internet available offline before you get too far away from Canyon, TX or Amarillo. Google maps has an offline mode: tap the three lines in Maps on your phone (the "hamburger menu"), and find "offline areas" and choose the area around the Palo Duro Canyon.  Or take screenshots of the map like Karen does. For any information off the web you want to have with you, you can use a browser like Offline Pages to store it beforehand.<p><p>
+		    Expect government-run Wi-Fi at the pavilion to almost, but infuriatingly not quite work. :(</p>
+                    <h4>Can I call a ride-share from the venue?</h4><p>Well, there aren't many drivers in the area, and without real cell coverage calling them would be difficult.  We think it's probably possible to talk to a driver personally if you call them in Amarillo, and offer to pay them to come to the venue.  Or, if you really wanted to use ride-share to get back and forth, talk to us and we'll see what we can do!<p>
                 </div>
             </div>
         </div>
